# python-fullstack-boilerplate

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: health.py
backend/app/core/: config.py
backend/app/models/: user.py
docs/: BRANCHING_WORKFLOW.md
frontend/: main.py
frontend/utils/: api_client.py
scripts/: run.sh
tests/: test_api.py
